--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1191</width>
+    <width>1187</width>
     <height>837</height>
    </rect>
   </property>
@@ -23,11 +23,17 @@
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QTabWidget" name="tabWidget_Dispaly">
+      <property name="baseSize">
+       <size>
+        <width>0</width>
+        <height>100</height>
+       </size>
+      </property>
       <property name="tabPosition">
        <enum>QTabWidget::South</enum>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="GLWidget" name="ModelView">
        <attribute name="title">
@@ -53,7 +59,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1191</width>
+     <width>1187</width>
      <height>23</height>
     </rect>
    </property>
@@ -126,8 +132,8 @@
   <widget class="QDockWidget" name="dockWidget_outputLog">
    <property name="minimumSize">
     <size>
-     <width>128</width>
-     <height>139</height>
+     <width>147</width>
+     <height>187</height>
     </size>
    </property>
    <property name="features">
@@ -183,67 +189,13 @@
    <widget class="QWidget" name="dockWidgetContents_2">
     <layout class="QVBoxLayout" name="verticalLayout_5">
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_4">
-       <item>
-        <widget class="QTreeWidget" name="treeWidget_project">
-         <column>
-          <property name="text">
-           <string notr="true">1</string>
-          </property>
-         </column>
-        </widget>
-       </item>
-      </layout>
-     </item>
-    </layout>
-   </widget>
-  </widget>
-  <widget class="QDockWidget" name="dockWidget_2">
-   <property name="sizePolicy">
-    <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-     <horstretch>0</horstretch>
-     <verstretch>0</verstretch>
-    </sizepolicy>
-   </property>
-   <property name="minimumSize">
-    <size>
-     <width>250</width>
-     <height>56</height>
-    </size>
-   </property>
-   <property name="features">
-    <set>QDockWidget::NoDockWidgetFeatures</set>
-   </property>
-   <property name="windowTitle">
-    <string>建筑物场景数据</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>2</number>
-   </attribute>
-   <widget class="QWidget" name="dockWidgetContents_5">
-    <layout class="QVBoxLayout" name="verticalLayout_3"/>
-   </widget>
-  </widget>
-  <widget class="QDockWidget" name="dockWidget_para">
-   <property name="minimumSize">
-    <size>
-     <width>89</width>
-     <height>300</height>
-    </size>
-   </property>
-   <property name="features">
-    <set>QDockWidget::DockWidgetFloatable</set>
-   </property>
-   <property name="windowTitle">
-    <string>参数</string>
-   </property>
-   <attribute name="dockWidgetArea">
-    <number>1</number>
-   </attribute>
-   <widget class="QWidget" name="dockWidgetContents_3">
-    <layout class="QVBoxLayout" name="verticalLayout_6">
-     <item>
-      <widget class="QTreeWidget" name="treeWidget_para">
+      <widget class="QTreeWidget" name="treeWidget_project">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>200</height>
+        </size>
+       </property>
        <column>
         <property name="text">
          <string notr="true">1</string>
@@ -254,20 +206,37 @@
     </layout>
    </widget>
   </widget>
-  <widget class="QDockWidget" name="dockWidget_localsecene">
+  <widget class="QDockWidget" name="dockWidget">
+   <attribute name="dockWidgetArea">
+    <number>1</number>
+   </attribute>
+   <widget class="scs_GUI::scsTreeWidget" name="dockWidgetContents_3">
+    <property name="styleSheet">
+     <string notr="true">*{
+    border-style: outset;
+    border-width: 5px;
+
+    border-color: beige;
+}</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="dockWidget_Property">
    <property name="minimumSize">
     <size>
-     <width>80</width>
-     <height>100</height>
+     <width>220</width>
+     <height>200</height>
     </size>
    </property>
    <property name="windowTitle">
-    <string>局部场景数据</string>
+    <string>属性</string>
    </property>
    <attribute name="dockWidgetArea">
     <number>2</number>
    </attribute>
-   <widget class="QWidget" name="dockWidgetContents_4"/>
+   <widget class="QWidget" name="dockWidgetContents_6">
+    <layout class="QVBoxLayout" name="verticalLayout_4"/>
+   </widget>
   </widget>
   <action name="action">
    <property name="text">
@@ -371,6 +340,12 @@
    <class>GLWidget</class>
    <extends>QWidget</extends>
    <header location="global">glWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>scs_GUI::scsTreeWidget</class>
+   <extends>QWidget</extends>
+   <header>./ui/tree/scsTreeWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
